--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.4"
   }
